# cpp-game-template

./: CMakeLists.txt  README.md
src/: main.cpp
